--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Socially Anxious Social Anxiety Aid</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <h1>Solve Social Anxiety,</h1><br><p>You're just one click away from helping someone who would otherwise run away from social situations, get the therapy they need.</p>
   
 <button id="scared">Solve Social Anxiety</button>
   
 <button id="fthis" onclick="alert('Yeah, Confrentation sucks, I wouldnt want to listen to someone elses issues either')">fuck this</button>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js'></script><script  src="./script.js"></script>
+
+</body>
+</html>
