--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Socially Anxious Social Anxiety Aid</title>
+  <title>click</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<h1>Solve Social Anxiety,</h1><br><p>You're just one click away from helping someone who would otherwise run away from social situations, get the therapy they need.</p>
+<h1>moldy</h1><br><p>help yourself</p>
   
-<button id="scared">Solve Social Anxiety</button>
+<button id="scared">very secret files</button>
   
 <button id="fthis" onclick="alert('Yeah, Confrentation sucks, I wouldnt want to listen to someone elses issues either')">fuck this</button>
 <!-- partial -->
